--- a/package.json
+++ b/package.json
@@ -3,15 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "react": "^16.9.0",
-    "react-dom": "^16.9.0",
-    "react-scripts": "0.9.x",
-    "react-redux": "^7.1.0",
-    "redux-persist": "^5.10.0",
-    "redux-thunk": "^2.2.0",
     "axios": "^0.18.0",
     "moment": "^2.24.0",
+    "react": "^16.9.0",
+    "react-dom": "^16.9.0",
     "react-icons": "^3.5.0",
+    "react-redux": "^7.1.0",
+    "react-scripts": "0.9.x",
+    "redux": "^4.0.4",
+    "redux-persist": "^5.10.0",
+    "redux-thunk": "^2.2.0",
     "socket.io-client": "^2.1.1"
   },
   "devDependencies": {
